tests/NormalTests/paczka1/small_fuzzy/93953416.err
Error in line 1: N8mSs A607 88,6
Error in line 2: N8mSs S90 31,1
Error in line 8: N8mSs A964 194,36
Error in line 7: kEgzbDdO A964 57,1
Error in line 10: kEgzbDdO S90 49,1
Error in line 14: hDpfBR0r A607 65,2
